force-app/main/default/objects/Branch_Trainer_Mapping__c/Branch_Trainer_Mapping__c.object-meta.xml
<CustomObject>
    <label>Branch Trainer Mapping</label>
    <pluralLabel>Branch Trainer Mappings</pluralLabel>
    <nameField>
        <label>Mapping Name</label>
        <type>AutoNumber</type>
        <displayFormat>BTM-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Maps a Trainer (User) to one or more Branches. Drives Apex-managed sharing of Lead records to Trainers.</description>
</CustomObject>