force-app/main/default/objects/Branch_Trainer_Mapping__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Lookup</type>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Trainer Mappings</relationshipLabel>
    <relationshipName>Trainer_Mappings</relationshipName>
    <required>true</required>
</CustomField>