force-app/main/default/objects/Branch_Trainer_Mapping__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>When false, Trainer sharing for this branch is revoked by the TrainerSharingService.</description>
</CustomField>