force-app/main/default/objects/Branch_Trainer_Mapping__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <label>Trainer</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Trainer Branch Mappings</relationshipLabel>
    <relationshipName>Trainer_Branch_Mappings</relationshipName>
</CustomField>